Update .env.example, docker-compose.yml, and README.md with new configuration values and service names for improved clarity and consistency and added sample of proforma and receipt files to use while testing

--- a/.env.example
+++ b/.env.example
@@ -33,9 +33,11 @@ CELERY_RESULT_BACKEND=redis://redis:6379/0
 
 
 #POSTMARK CONFIGURATION
-POSTMARK_SERVER_TOKEN=''''
-POSTMARK_FROM_EMAIL=''''
+POSTMARK_SERVER_TOKEN=your-postmark-server-token
+POSTMARK_FROM_EMAIL=noreply@yourdomain.com
 POSTMARK_FROM_NAME=IST Africa ProcureFlow
+
+
 
 # Logging Configuration
 LOG_FILE_PATH=logs/app.log
@@ -44,13 +46,15 @@ LOG_RETENTION=30 days
 LOG_LEVEL=INFO
 
 # OPEN ROUTER CREDENTIALS
-OPENROUTER_API_KEY=''''
+OPENROUTER_API_KEY=your-openrouter-api-key
 OPENROUTER_MODEL=z-ai/glm-4.6
 
 # CLOUDFLARE CREDENTIALS
 USE_R2_STORAGE=False 
-R2_ENDPOINT_URL=''''
-R2_ACCESS_KEY_ID=''''
-R2_SECRET_ACCESS_KEY=''''
+R2_ENDPOINT_URL=https://cloudflare-endpoint.com
+R2_ACCESS_KEY_ID=your-access-key
+R2_SECRET_ACCESS_KEY=your-secret-key
 R2_BUCKET_NAME=ist-africa
-R2_PUBLIC_URL=''''
+R2_PUBLIC_URL=https://your-domain.com
+
+
